--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -3,3 +3,19 @@
   margin: 0 auto;
 
 }
+
+.button-show-password {
+    position: absolute;
+    top: 1.1rem;
+    right: 2rem;
+    padding: 0;
+    font-size: 0.85rem;
+    user-select: none;
+    border: none;
+    box-shadow: none;
+    cursor: pointer;
+}
+
+.button-show-password:focus-visible {
+    outline: transparent;
+}
